# sparselizard

./: .gitignore  CMakeLists.txt
cMake/: SetupBLAS.cmake  SetupMPI.cmake  SetupPETSC.cmake  SetupSLEPC.cmake  functions.cmake
src/: CMakeLists.txt  logs.cpp
src/expression/: expression.cpp  expression.h
src/expression/operation/: operation.h  opmutableconstant.cpp  opmutableconstant.h  opproduct.h  opspline_nt.cpp  opspline_nt.h  opsum.h  sl.cpp  sl.h
src/field/: rawfield.h
src/formulation/: formulation.cpp  mat.h  rawmat.cpp  rawmat.h
src/gausspoint/: gausspoints.h
src/mesh/: disjointregionselector.h  elementselector.h  gentools.cpp  gentools.h  mesh.cpp  mesh.h  petscmesh.cpp  rawmesh.cpp  rawmesh.h
src/shapefunction/hierarchical/: hierarchicalformfunctioncontainer.h
